Changed background color to make sure css is connected

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
 
     <link rel="stylesheet" href="assests/css/style.css" />
-    <title>Document</title>
+    <title>Museum of Candy</title>
   </head>
   <body>
     <!-- Font Awesome Script -->
