Added navbar + brand in index.html and add utility class for uppercase in style.css

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <title>Museum of Candy</title>
   </head>
   <body>
+    <!-- NavBar -->
+    <nav id="main-nav" class="navbar navbar-dark bg-dark navbar-expand-md">
+      <a href="#" class="navbar-brand uppercase">candy</a>
+    </nav>
+    <!-- End of Navbar -->
     <!-- Font Awesome Script -->
     <script
       src="https://kit.fontawesome.com/15e65efbb4.js"
