Added the base structure for the navbar and navbar items to index.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,31 @@
     <!-- NavBar -->
     <nav id="main-nav" class="navbar navbar-dark bg-dark navbar-expand-md">
       <a href="#" class="navbar-brand uppercase">candy</a>
+      <!-- Navbar Toggler -->
+      <button
+        class="navbar-toggler"
+        data-toggle="collapse"
+        data-target="#nav-links"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Navbar menu -->
+      <div id="nav-links" class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <!-- Nav-item 1: HOME -->
+          <li class="nav-item">
+            <a href="#" class="nav-link uppercase">Home</a>
+          </li>
+          <!-- Nav-item 2: ABOUT -->
+          <li class="nav-item">
+            <a href="#" class="nav-link uppercase">About</a>
+          </li>
+          <!-- Nav-item 3: TICKETS -->
+          <li class="nav-item">
+            <a href="#" class="nav-link uppercase">Tickets</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <!-- End of Navbar -->
     <!-- Font Awesome Script -->
