Styled the navbar and fixed it to the top of the screen

--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
   </head>
   <body>
     <!-- NavBar -->
-    <nav id="main-nav" class="navbar navbar-dark bg-dark navbar-expand-md">
+    <nav
+      id="main-nav"
+      class="navbar navbar-dark navbar-expand-md py-0 fixed-top"
+    >
       <a href="#" class="navbar-brand uppercase">candy</a>
       <!-- Navbar Toggler -->
       <button
         class="navbar-toggler"
         data-toggle="collapse"
         data-target="#nav-links"
+        aria-label="Toggle Navigation bar"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
