--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
       </div>
     </nav>
     <!-- End of Navbar -->
+
+    <!-- Heading Section -->
+    <section>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-6 d-none d-sm-block"></div>
+          <div class="col-6"></div>
+        </div>
+      </div>
+    </section>
+    <!-- Heading Section -->
     <!-- Font Awesome Script -->
     <script
       src="https://kit.fontawesome.com/15e65efbb4.js"
