--- a/index.html
+++ b/index.html
@@ -56,11 +56,19 @@
     <!-- End of Navbar -->
 
     <!-- Heading Section -->
-    <section>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-6 d-none d-sm-block"></div>
-          <div class="col-6"></div>
+    <section id="header-section">
+      <div class="container-fluid px-0">
+        <div class="row align-items-center">
+          <div class="col-lg-6 d-none d-lg-block">
+            <h2 class="text-center uppercase">Museum Of Candy</h2>
+          </div>
+          <div class="col-md-12 col-lg-6">
+            <img
+              src="assests/img/hand2.png"
+              alt="hand image"
+              class="img-fluid"
+            />
+          </div>
         </div>
       </div>
     </section>
