Completed the heading section and styled the heading-group container

--- a/index.html
+++ b/index.html
@@ -60,7 +60,32 @@
       <div class="container-fluid px-0">
         <div class="row align-items-center">
           <div class="col-lg-6 d-none d-lg-block">
-            <h2 class="text-center uppercase">Museum Of Candy</h2>
+            <div
+              id="heading-group"
+              class="text-white uppercase text-center mt-5"
+            >
+              <h1>
+                Museum<span>/</span>Of<span>/</span>Candy
+              </h1>
+              <h1>
+                Museum<span>/</span>Of<span>/</span>Candy
+              </h1>
+              <h1>
+                Museum<span>/</span>Of<span>/</span>Candy
+              </h1>
+              <h1>
+                Museum<span>/</span>Of<span>/</span>Candy
+              </h1>
+              <h1>
+                Museum<span>/</span>Of<span>/</span>Candy
+              </h1>
+              <h1>
+                Museum<span>/</span>Of<span>/</span>Candy
+              </h1>
+              <h1>
+                Museum<span>/</span>Of<span>/</span>Candy
+              </h1>
+            </div>
           </div>
           <div class="col-md-12 col-lg-6">
             <img
