--- a/index.html
+++ b/index.html
@@ -98,6 +98,14 @@
       </div>
     </section>
     <!-- Heading Section -->
+
+    <!-- Content Section -->
+    <section id="content">
+      <div class="container-fluid">
+        <div class="row"></div>
+      </div>
+    </section>
+    <!-- End of Content Section -->
     <!-- Font Awesome Script -->
     <script
       src="https://kit.fontawesome.com/15e65efbb4.js"
