Styled the first content blurb inside of the content section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- Content Section -->
     <section id="content">
       <div class="container-fluid px-0">
-        <div class="row text-center align-items-center">
+        <div class="row text-center align-items-center blurb">
           <div class="col-md-6 order-2 order-md-1">
             <img
               src="assests/img/milk.png"
