Added two extra blurbs into the content section

--- a/index.html
+++ b/index.html
@@ -102,6 +102,73 @@
     <!-- Content Section -->
     <section id="content">
       <div class="container-fluid px-0">
+        <!-- Blurb 1 -->
+        <div class="row text-center align-items-center blurb">
+          <div class="col-md-6 order-2 order-md-1">
+            <img
+              src="assests/img/milk.png"
+              alt="milkshake image"
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-md-6 order-1 order-md-2">
+            <div class="row justify-content-center">
+              <div class="col-10 col-lg-8">
+                <h2 class="uppercase">Museum Of Candy</h2>
+                <img
+                  src="assests/img/lolli_icon.png"
+                  alt="lollipop icon"
+                  class="d-none d-lg-inline"
+                />
+                <p class="lead">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Rerum blanditiis sapiente aspernatur saepe sint vero deleniti
+                  ea et, eveniet aliquam velit cupiditate, eos magnam soluta
+                  molestiae beatae aut? Debitis, vitae! Lorem ipsum dolor sit
+                  amet, consectetur adipisicing elit. Nostrum, laborum. Lorem
+                  ipsum dolor sit amet consectetur adipisicing elit. Commodi,
+                  asperiores!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Blurb 2 -->
+
+        <div class="row text-center align-items-center blurb">
+          <div class="col-md-6 order-2 order-md-1">
+            <img
+              src="assests/img/milk.png"
+              alt="milkshake image"
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-md-6 order-1 order-md-2">
+            <div class="row justify-content-center">
+              <div class="col-10 col-lg-8">
+                <h2 class="uppercase">Museum Of Candy</h2>
+                <img
+                  src="assests/img/lolli_icon.png"
+                  alt="lollipop icon"
+                  class="d-none d-lg-inline"
+                />
+                <p class="lead">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Rerum blanditiis sapiente aspernatur saepe sint vero deleniti
+                  ea et, eveniet aliquam velit cupiditate, eos magnam soluta
+                  molestiae beatae aut? Debitis, vitae! Lorem ipsum dolor sit
+                  amet, consectetur adipisicing elit. Nostrum, laborum. Lorem
+                  ipsum dolor sit amet consectetur adipisicing elit. Commodi,
+                  asperiores!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- blurb 3 -->
+
         <div class="row text-center align-items-center blurb">
           <div class="col-md-6 order-2 order-md-1">
             <img
