Added the images to each blurb

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="row text-center align-items-center blurb">
           <div class="col-md-6 order-1 order-md-2">
             <img
-              src="assests/img/milk.png"
+              src="assests/img/sprinkles.png"
               alt="milkshake image"
               class="img-fluid"
             />
@@ -172,7 +172,7 @@
         <div class="row text-center align-items-center blurb">
           <div class="col-md-6 order-2 order-md-1">
             <img
-              src="assests/img/milk.png"
+              src="assests/img/gumball.png"
               alt="milkshake image"
               class="img-fluid"
             />
