Added padding to the paragraph blurbs on mobile screens to make more responsive

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   alt="lollipop icon"
                   class="d-none d-lg-inline"
                 />
-                <p class="lead">
+                <p class="lead mb-5 mb-md-0">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Rerum blanditiis sapiente aspernatur saepe sint vero deleniti
                   ea et, eveniet aliquam velit cupiditate, eos magnam soluta
@@ -137,14 +137,7 @@
         <!-- Blurb 2 -->
 
         <div class="row text-center align-items-center blurb">
-          <div class="col-md-6 order-1 order-md-2">
-            <img
-              src="assests/img/sprinkles.png"
-              alt="milkshake image"
-              class="img-fluid"
-            />
-          </div>
-          <div class="col-md-6 order-2 order-md-1">
+          <div class="col-md-6">
             <div class="row justify-content-center">
               <div class="col-10 col-lg-8">
                 <h2 class="uppercase">Museum Of Candy</h2>
@@ -153,7 +146,7 @@
                   alt="lollipop icon"
                   class="d-none d-lg-inline"
                 />
-                <p class="lead">
+                <p class="lead mb-5 mb-md-0">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Rerum blanditiis sapiente aspernatur saepe sint vero deleniti
                   ea et, eveniet aliquam velit cupiditate, eos magnam soluta
@@ -164,6 +157,14 @@
                 </p>
               </div>
             </div>
+          </div>
+
+          <div class="col-md-6">
+            <img
+              src="assests/img/sprinkles.png"
+              alt="milkshake image"
+              class="img-fluid"
+            />
           </div>
         </div>
 
@@ -186,7 +187,7 @@
                   alt="lollipop icon"
                   class="d-none d-lg-inline"
                 />
-                <p class="lead">
+                <p class="lead mb-5 mb-md-0">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Rerum blanditiis sapiente aspernatur saepe sint vero deleniti
                   ea et, eveniet aliquam velit cupiditate, eos magnam soluta
