Added footer to index file

--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@
       </div>
     </section>
     <!-- End of Content Section -->
+    <!-- Footer -->
+    <footer id="main-footer" class="mt-2 p-5 text-center">
+      <p>ToD productions &copy; <span id="year"></span></p>
+    </footer>
+    <!-- End of Footer -->
     <!-- Font Awesome Script -->
     <script
       src="https://kit.fontawesome.com/15e65efbb4.js"
